--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jcalendar-1.1.4.jar.zip}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -60,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=principal.Login
+main.class=principal.Login2
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
